src/tests/test-src/errors/E21-void-assign.syntran
// E21: void-assign
// A variable was initialized from an expression of void type

fn f()
{
	let x = 1;
}

let a = f();
